# TDD-FastAPI-MongoDB

./: Makefile  README.md  docker-compose.yml  pyproject.toml
store/: main.py  routers.py
store/controller/: product.py
store/core/: exceptions.py
store/models/: base.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/controller/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
